@@ -35,7 +35,7 @@ deps=`grep ^$modname: $moddep | sed s@^.*:@@`
 rm -f $tmpfile $outfile
 
 # stripout .modname and .moddeps sections from input module
-objcopy -R .modname -R .moddeps $infile $tmpfile
+@OBJCOPY@ -R .modname -R .moddeps $infile $tmpfile
 
 # Attach .modname and .moddeps sections
 t1=`mktemp "${TMPDIR:-/tmp}/tmp.XXXXXXXXXX"` || exit 1
@@ -45,9 +45,9 @@ t2=`mktemp "${TMPDIR:-/tmp}/tmp.XXXXXXXXXX"` || exit 1
 for dep in $deps; do printf "$dep\0" >> $t2; done
 
 if test -n "$deps"; then
-	objcopy --add-section .modname=$t1 --add-section .moddeps=$t2 $tmpfile
+	@OBJCOPY@ --add-section .modname=$t1 --add-section .moddeps=$t2 $tmpfile
 else
-	objcopy --add-section .modname=$t1 $tmpfile
+	@OBJCOPY@ --add-section .modname=$t1 $tmpfile
 fi
 rm -f $t1 $t2
 
